--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,1 +1,209 @@
-@import"http://fonts.googleapis.com/css?family=Montserrat:400,700";.ccard__ul:before,[data-type=toggle] li:before,.ccard__ul:after,[data-type=toggle] li:after{content:" ";display:table}.ccard__ul:after,[data-type=toggle] li:after{clear:both}#demo{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-webkit-backface-visibility:hidden;backface-visibility:hidden;-webkit-perspective:1000;perspective:1000}#demo{-webkit-transition:.3s ease-in-out;-o-transition:.3s ease-in-out;transition:.3s ease-in-out}.ccard__ul{margin-bottom:0;padding-left:0;list-style:none}#demo{-webkit-transform:translateX(-100%);-ms-transform:translateX(-100%);-o-transform:translateX(-100%);transform:translateX(-100%);position:fixed;top:100px;left:0;z-index:1050;width:205px;padding:8px 0;background-color:#f9f9f9}.ccard-in #demo{-webkit-transform:translateX(0);-ms-transform:translateX(0);-o-transform:translateX(0);transform:translateX(0)}.ccard__block{padding:10px}.ccard__title,[data-type=toggle] h4{line-height:1;margin-bottom:12px;font-family:Montserrat;font-size:12px;font-weight:700;text-transform:uppercase;letter-spacing:0;color:#191919}[data-type=theme-main],[data-type=theme-color]{margin-top:-5px}[data-type=theme-main] li,[data-type=theme-color] li{float:left;margin:5px 5px 0 0}[data-type=theme-main] li:nth-child(4),[data-type=theme-main] li:nth-child(8),[data-type=theme-main] li:nth-child(12),[data-type=theme-main] li:nth-child(16),[data-type=theme-color] li:nth-child(4),[data-type=theme-color] li:nth-child(8),[data-type=theme-color] li:nth-child(12),[data-type=theme-color] li:nth-child(16){margin-right:0}[data-type=theme-main] a,[data-type=theme-color] a{position:relative;display:block;width:40px;height:20px;border:1px solid #eee}[data-type=theme-main] a.selected:after,[data-type=theme-color] a.selected:after{position:absolute;top:0;right:0;content:"";border-top:10px solid rgba(25,25,25,.8);border-left:10px solid transparent}[data-color-name=black].selected:after,[data-color-name=dark].selected:after{border-top-color:rgba(249,249,249,.8)!important}[data-type=toggle] li:not(:last-child){margin-bottom:12px}[data-type=toggle] h4{height:20px;line-height:20px;margin-bottom:0;float:left}[data-type=toggle] a{float:right;position:relative;display:block;width:40px;height:20px;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}[data-type=toggle] a:after{position:relative;left:0;display:block;content:"";width:50%;height:100%}[data-type=toggle] a._on:after{left:50%}[data-type=toggle]._light a{-webkit-transition:background-color .3s ease-in-out;-o-transition:background-color .3s ease-in-out;transition:background-color .3s ease-in-out;background-color:#f0f0f0;-webkit-border-radius:50px;border-radius:50px;padding:2px}[data-type=toggle]._light a:after{-webkit-transition:left .3s ease-in-out;-o-transition:left .3s ease-in-out;transition:left .3s ease-in-out;-webkit-border-radius:50%;border-radius:50%;background-color:#fff}[data-type=toggle]._light a._on{background-color:#52AEEF}.ccard__toggle{position:absolute;top:0;right:-44px;overflow:hidden;width:44px;height:44px;background-color:#f9f9f9}.ccard__toggle img{display:block}.ccard__toggle:hover img{-webkit-animation:ccard-rotate 2s linear infinite;-o-animation:ccard-rotate 2s linear infinite;animation:ccard-rotate 2s linear infinite}@-webkit-keyframes ccard-rotate{0%{-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-o-keyframes ccard-rotate{0%{-o-transform:rotate(0deg);transform:rotate(0deg)}100%{-o-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes ccard-rotate{0%{-webkit-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(360deg);-o-transform:rotate(360deg);transform:rotate(360deg)}}.site-header__logo a{display:none}.is-light .site-header__logo ._light{display:block}.is-black .site-header__logo ._dark,.is-dark .site-header__logo ._dark{display:block}.site-header__logo img{display:none}.is-light .site-header__logo ._light{display:block}.is-dark .site-header__logo ._dark{display:block}.is-red .site-header__logo ._red{display:block}.is-blue .site-header__logo ._blue{display:block}.is-green .site-header__logo ._green{display:block}.is-orange .site-header__logo ._orange{display:block}.is-pink .site-header__logo ._pink{display:block}.is-purple .site-header__logo ._purple{display:block}.is-brown .site-header__logo ._brown{display:block}
+/* General Blueprint Style */
+
+@font-face {
+	font-family: 'bpicons';
+	font-weight: normal;
+	font-style: normal;
+	src: url('../fonts/bpicons/bpicons.eot');
+	src: url('../fonts/bpicons/bpicons.eot?#iefix') format('embedded-opentype'), url('../fonts/bpicons/bpicons.woff') format('woff'), url('../fonts/bpicons/bpicons.ttf') format('truetype'), url('../fonts/bpicons/bpicons.svg#bpicons') format('svg');
+}
+
+
+/* Made with http://icomoon.io/ */
+
+
+/* Resets */
+
+*,
+*:after,
+*:before {
+	box-sizing: border-box;
+}
+
+
+/* Helper classes */
+
+.cf:before,
+.cf:after {
+	content: ' ';
+	display: table;
+}
+
+.cf:after {
+	clear: both;
+}
+
+
+/* Main styles */
+
+body {
+	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
+	margin: 0;
+	color: #cecece;
+	background: #1d1e21;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+a {
+	text-decoration: none;
+	color: #5c5edc;
+	outline: none;
+}
+
+a:hover {
+	color: #fff;
+}
+
+
+/* Blueprint header */
+
+.bp-header {
+	padding: 6em 10vw 2em;
+}
+
+.bp-header__title {
+	font-size: 2.125em;
+	font-weight: 700;
+	line-height: 1.3;
+	margin: 0;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	color: #fff;
+}
+
+.bp-header__desc {
+	font-size: 0.95em;
+	margin: 0.5em 0 1em;
+	padding: 0;
+}
+
+.bp-header__present {
+	font-size: 0.85em;
+	font-weight: 700;
+	position: relative;
+	z-index: 100;
+	display: block;
+	padding: 0 0 0.6em 0.1em;
+	letter-spacing: 0.5em;
+	text-transform: uppercase;
+	color: #5c5edc;
+}
+
+.bp-tooltip:after {
+	font-size: 50%;
+	font-size: 75%;
+	position: relative;
+	top: -8px;
+	left: -12px;
+	width: 30px;
+	height: 30px;
+}
+
+.bp-tooltip:hover:before {
+	content: attr(data-content);
+	font-size: 110%;
+	font-weight: 700;
+	line-height: 1.2;
+	position: absolute;
+	left: auto;
+	margin-left: 4px;
+	padding: 0.8em 1em;
+	text-align: left;
+	text-indent: 0;
+	letter-spacing: 0;
+	text-transform: none;
+	color: #fff;
+	background: #5c5edc;
+}
+
+.bp-nav {
+	margin: 0 0 0 -0.75em;
+}
+
+.bp-nav__item {
+	position: relative;
+	display: inline-block;
+	width: 2.5em;
+	height: 2.5em;
+	margin: 0 0.1em;
+	text-align: left;
+	border-radius: 50%;
+}
+
+.bp-nav__item > span {
+	display: none;
+}
+
+.bp-nav__item:hover:before {
+	content: attr(data-info);
+	font-size: 0.85em;
+	font-weight: bold;
+	position: absolute;
+	top: 120%;
+	left: 0;
+	width: 600%;
+	text-align: left;
+	pointer-events: none;
+	color: #595a5f;
+}
+
+.bp-nav__item:hover {
+	background: #5c5edc;
+}
+
+.bp-icon:after {
+	font-family: 'bpicons';
+	font-weight: normal;
+	font-style: normal;
+	font-variant: normal;
+	text-align: center;
+	text-transform: none;
+	color: #5c5edc;
+	-webkit-font-smoothing: antialiased;
+
+	speak: none;
+}
+
+.bp-nav .bp-icon:after {
+	line-height: 2.4;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-indent: 0;
+}
+
+.bp-nav a:hover:after {
+	color: #fff;
+}
+
+.bp-icon--next:after {
+	content: '\e000';
+}
+
+.bp-icon--drop:after {
+	content: '\e001';
+}
+
+.bp-icon--archive:after {
+	content: '\e002';
+}
+
+.bp-icon--about:after {
+	content: '\e003';
+}
+
+.bp-icon--prev:after {
+	content: '\e004';
+}
+
+@media screen and (max-width: 40em) {
+	.bp-header {
+		padding: 50px 20px 1em;
+	}
+	.bp-header__title {
+		font-size: 1.8em;
+	}
+}
